Revise how to run the project with Java 23
Updated instructions for running the project with Java 23.